# TestCasesGenerator

./: .env.example  .env.template  .gitignore  CHANGELOG.md  CLEANUP_CHANGES.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  LICENSE  README.md  SECURITY.md  UI_CHANGES.md  UI_README.md  docker-compose.yml  init-sqlite.sh  pyproject.toml  requirements.txt  run_ui.py  setup.py  sqlite-docker.sh
app/: config.py  ui.py  ui.py.bak
app/db/: embedding.py  model.py  save.py
app/io/: adf_parser.py
app/logic/: embedder.py  matching.py  question_generator.py  question_generator_gemini.py  test_case_generator.py  test_case_generator_gemini.py
app/static/css/: button-fix-clean.css  buttons.css  env-alerts.css  jira-button-fix.css  jira-filter.css  new-ui.css  style.css  test-cases.css  tickets-table.css
app/static/js/: button-fix-clean.js  diagnostic-button-fix.js  direct-button-fix.js  html-form-button.js  jira-button-fix.js  script.js
app/templates/: index.html  index.html.fix  index.html.new  index.html.old  output.html
data/: proref.db
data/questions/: README.md
data/test_cases/: README.md
data/transcripts/: example_transcript.txt
docs/: GEMINI_SETUP.md
scripts/: chat.py  create_sample_data.py  db_migrate.py  embed_tickets.py  fetch_backlog.py  generate_questions.py  generate_test_cases.py  list_sprints.py  migrate_add_edited_flag.py  test_gemini_setup.py  test_match.py
scripts/utils/: README.md  test_jira_status.py
scripts_backup/: fetch_backlog.py  generate_test_cases.py
tests/: test_models.py
